# PMIAgent

./: .env.example  README.md  conf.yaml.example  main.py  pyproject.toml  test.py
src/: agent.py
src/agent/: agent.py  subagent.py
src/config/: __init__.py  agents.py  configuration.py  loader.py  logger.py  tools.py
src/crawler/: crawler.py  jina_client.py  readability_extractor.py
src/deep_agent/: agent.py
src/deep_agent/research_agent/: __init__.py
src/graph/: builder.py  node.py
src/llms/: llm.py
src/middleware/: __init__.py  agent_memory.py  context_enhancement.py  debug_middleware.py  layered_memory.py  logging.py  memory_adapter.py  performance_monitor.py  security.py  selective_tool_printer.py  trace_middleware.py  ui_events_middleware.py
src/prompts/: coder.md  coordinator.md  planner.md  prompt_template.py  prompts_zh.py  reporter.md  researcher.md  template.py
src/rag/: builder.py  dify.py  milvus.py  moi.py  qdrant.py
src/research_agent/: __init__.py  prompts_zh.py
src/tools/: __init__.py  bocha_search.py  crawl.py  crawl4ai.py  decorators.py  mineru_client.py  python_repl.py  search.py  search_postprocessor.py  think.py
src/tools/tavily_search/: tavily_search_api_wrapper.py  tavily_search_results_with_images.py
src/utils/: context_manager.py  json_utils.py
